[package]
name = "dip721_nft_container"
version = "0.1.0"
edition = "2021"

[dependencies]
ic-cdk = "0.12.1"
ic-cdk-macros = "0.8.4"
include-base64 = "0.1"
serde = { version = "1", features = ["derive"] }
percent-encoding = "2.1"
ic-certified-map = "0.4.0"
sha2 = "0.10.2"
serde_cbor = "0.11.2"
base64 = "0.21.7"
candid ="0.10.2"

[lib]
crate-type = ["cdylib"]


